--- a/angular.json
+++ b/angular.json
@@ -168,6 +168,39 @@
           }
         }
       }
+    },
+    "@tots/form-sidebar-page": {
+      "projectType": "library",
+      "root": "projects/tots/form-sidebar-page",
+      "sourceRoot": "projects/tots/form-sidebar-page/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/tots/form-sidebar-page/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/tots/form-sidebar-page/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/tots/form-sidebar-page/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "tsConfig": "projects/tots/form-sidebar-page/tsconfig.spec.json",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ]
+          }
+        }
+      }
     }
   },
   "cli": {
