Add build command sidebar page.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "build2": "ng build --project=@tots/form --configuration production && cd dist/tots/form/ && npm publish --access public",
     "build3": "ng build --project=@tots/form-api --configuration production && cd dist/tots/form-api/ && npm publish --access public",
+    "build4": "ng build --project=@tots/form-sidebar-page --configuration production && cd dist/tots/form-sidebar-page/ && npm publish --access public",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
