--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build2": "ng build --project=@tots/form --configuration production && cd dist/tots/form/ && npm publish --access public",
     "build3": "ng build --project=@tots/form-api --configuration production && cd dist/tots/form-api/ && npm publish --access public",
     "build4": "ng build --project=@tots/form-sidebar-page --configuration production && cd dist/tots/form-sidebar-page/ && npm publish --access public",
+    "build5": "ng build --project=@tots/date-field-form --configuration production && cd dist/tots/date-field-form/ && npm publish --access public",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -20,10 +21,12 @@
     "@angular/core": "^15.0.3",
     "@angular/forms": "^15.0.3",
     "@angular/material": "^15.0.2",
+    "@angular/material-moment-adapter": "^15.1.3",
     "@angular/platform-browser": "^15.0.3",
     "@angular/platform-browser-dynamic": "^15.0.3",
     "@angular/router": "^15.0.3",
     "@tots/core": "^15.0.3",
+    "moment": "^2.29.4",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
