Create structure for users selector menu.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build3": "ng build --project=@tots/form-api --configuration production && cd dist/tots/form-api/ && npm publish --access public",
     "build4": "ng build --project=@tots/form-sidebar-page --configuration production && cd dist/tots/form-sidebar-page/ && npm publish --access public",
     "build5": "ng build --project=@tots/date-field-form --configuration production && cd dist/tots/date-field-form/ && npm publish --access public",
+    "build6": "ng build --project=@tots/users-selector-menu --configuration production && cd dist/tots/users-selector-menu/ && npm publish --access public",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
