--- a/projects/tots/day-selector-menu/package.json
+++ b/projects/tots/day-selector-menu/package.json
@@ -2,8 +2,10 @@
   "name": "@tots/day-selector-menu",
   "version": "15.0.1",
   "peerDependencies": {
-    "@angular/common": "^15.0.0",
-    "@angular/core": "^15.0.0"
+    "@angular/common": "^15.0.3",
+    "@angular/core": "^15.0.3",
+    "@angular/material": "^15.0.3",
+    "@angular/material-moment-adapter": "^15.0.3"
   },
   "dependencies": {
     "tslib": "^2.3.0"
