--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "build6": "ng build --project=@tots/users-selector-menu --configuration production && cd dist/tots/users-selector-menu/ && npm publish --access public",
     "build7": "ng build --project=@tots/day-selector-menu --configuration production && cd dist/tots/day-selector-menu/ && npm publish --access public",
     "build8": "ng build --project=@tots/range-date-selector-menu --configuration production && cd dist/tots/range-date-selector-menu/ && npm publish --access public",
+    "build9": "ng build --project=@tots/html-field-form --configuration production && cd dist/tots/html-field-form/ && npm publish --access public",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -31,6 +32,8 @@
     "@tots/core": "^15.0.6",
     "@tots/loading": "^15.0.1",
     "moment": "^2.29.4",
+    "ngx-quill": "^21.0.0",
+    "quill": "^1.3.7",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -40,6 +43,7 @@
     "@angular/cli": "~15.0.3",
     "@angular/compiler-cli": "^15.0.3",
     "@types/jasmine": "~4.0.0",
+    "@types/quill": "^1.3.10",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
