--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,9 @@
       "@tots/form-sidebar-page": [
         "dist/tots/form-sidebar-page"
       ],
+      "@tots/html-field-form": [
+        "dist/tots/html-field-form"
+      ],
       "@tots/range-date-selector-menu": [
         "dist/tots/range-date-selector-menu"
       ],
