--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build7": "ng build --project=@tots/day-selector-menu --configuration production && cd dist/tots/day-selector-menu/ && npm publish --access public",
     "build8": "ng build --project=@tots/range-date-selector-menu --configuration production && cd dist/tots/range-date-selector-menu/ && npm publish --access public",
     "build9": "ng build --project=@tots/html-field-form --configuration production && cd dist/tots/html-field-form/ && npm publish --access public",
+    "build10": "ng build --project=@tots/quill-mention-field-form --configuration production && cd dist/tots/quill-mention-field-form/ && npm publish --access public",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -34,6 +35,7 @@
     "moment": "^2.29.4",
     "ngx-quill": "^21.0.0",
     "quill": "^1.3.7",
+    "quill-mention": "^4.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
