--- a/angular.json
+++ b/angular.json
@@ -55,6 +55,7 @@
             "tsConfig": "projects/example/tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
+              { "glob": "**/*", "input": "node_modules/monaco-editor", "output": "/assets/monaco/" },
               "projects/example/src/favicon.ico",
               "projects/example/src/assets"
             ],
@@ -393,6 +394,39 @@
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
             "tsConfig": "projects/tots/quill-mention-field-form/tsconfig.spec.json",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ]
+          }
+        }
+      }
+    },
+    "@tots/monaco-editor-field-form": {
+      "projectType": "library",
+      "root": "projects/tots/monaco-editor-field-form",
+      "sourceRoot": "projects/tots/monaco-editor-field-form/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/tots/monaco-editor-field-form/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/tots/monaco-editor-field-form/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/tots/monaco-editor-field-form/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "tsConfig": "projects/tots/monaco-editor-field-form/tsconfig.spec.json",
             "polyfills": [
               "zone.js",
               "zone.js/testing"
