--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build9": "ng build --project=@tots/html-field-form --configuration production && cd dist/tots/html-field-form/ && npm publish --access public",
     "build10": "ng build --project=@tots/quill-mention-field-form --configuration production && cd dist/tots/quill-mention-field-form/ && npm publish --access public",
     "build11": "ng build --project=@tots/monaco-editor-field-form --configuration production && cd dist/tots/monaco-editor-field-form/ && npm publish --access public",
+    "build12": "ng build --project=@tots/form-wizard --configuration production && cd dist/tots/form-wizard/ && npm publish --access public",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
