--- a/projects/tots/date-field-form/package.json
+++ b/projects/tots/date-field-form/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@tots/date-field-form",
-  "version": "15.0.12",
+  "version": "16.0.0",
   "peerDependencies": {
-    "@angular/common": "^15.0.0",
-    "@angular/core": "^15.0.0",
-    "@angular/material-moment-adapter": "^15.0.0",
-    "moment": "^2.29.4"
+    "@angular/common": "^16.0.0",
+    "@angular/core": "^16.0.0",
+    "@angular/material-moment-adapter": "^16.0.0",
+    "moment": "^2.29.4",
+    "@tots/form": "^16.0.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
