--- a/projects/tots/form/package.json
+++ b/projects/tots/form/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@tots/form",
-  "version": "15.0.57",
+  "version": "16.0.0",
   "peerDependencies": {
-    "@angular/common": "^15.0.3",
-    "@angular/core": "^15.0.3"
+    "@angular/common": "^16.0.0",
+    "@angular/core": "^16.0.0",
+    "@tots/loading": "^16.0.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
