--- a/projects/tots/html-field-form/package.json
+++ b/projects/tots/html-field-form/package.json
@@ -1,11 +1,12 @@
 {
   "name": "@tots/html-field-form",
-  "version": "15.0.1",
+  "version": "16.0.0",
   "peerDependencies": {
-    "@angular/common": "^15.0.0",
-    "@angular/core": "^15.0.0",
-    "ngx-quill": "^21.0.0",
-    "quill": "^1.3.7"
+    "@angular/common": "^16.0.0",
+    "@angular/core": "^16.0.0",
+    "ngx-quill": "^22.0.0",
+    "quill": "^1.3.7",
+    "@tots/form": "^16.0.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
