--- a/projects/tots/monaco-editor-field-form/package.json
+++ b/projects/tots/monaco-editor-field-form/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@tots/monaco-editor-field-form",
-  "version": "15.0.0",
+  "version": "16.0.0",
   "peerDependencies": {
-    "@angular/common": "^15.0.0",
-    "@angular/core": "^15.0.0",
-    "ngx-monaco-editor-v2": "^15.0.1"
+    "@angular/common": "^16.0.0",
+    "@angular/core": "^16.0.0",
+    "ngx-monaco-editor-v2": "^16.0.1",
+    "@tots/form": "^16.0.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
